--- a/lib/proca_web/templates/dash/team.html.leex
+++ b/lib/proca_web/templates/dash/team.html.leex
@@ -7,13 +7,16 @@
   </a>
 </header>
 
-<!-- - TODO add form -->
-<%= if not is_nil(@invitable_users) do %>
-  <section class="card border-bottom-success shadow">
-    <div class="card-body container">
-      <form phx-submit="invite" class="form-inline">
-        <!-- <div class="row"> -->
-        <!-- <div class="col-md-10"> -->
+<article class="row">
+  <div class="col-lg-6">
+
+    <!-- - TODO add form -->
+    <%= if not is_nil(@invitable_users) do %>
+      <section class="card border-bottom-success shadow">
+        <div class="card-body container">
+          <form phx-submit="invite" class="form-inline">
+            <!-- <div class="row"> -->
+            <!-- <div class="col-md-10"> -->
             <label class="mr-2" for="user_select">e-mail: </label>
             <select class="form-control w-50 mr-2" name="user" id="user_select" required>
               <option value="">Choose user to invite</option>
@@ -26,53 +29,81 @@
             <button class="form-control btn-success float-right" type="submit">Invite</button>
             <!-- </div> -->
             <!-- </div> -->
-      </form>
-    </div>
-  </section>
-<% end %>
-
-<section>
-  <ul class="list-group">
-    <%= for staff <- @staffers do %>
-      <li class="list-group-item"> 
-        <div class="row">
-          <div class="col-lg-6">
-            <p>
-              <strong><%= staff.user.email %></strong>
-            </p>
-          </div class="col-lg-6">
-          <div class="col-lg-6 d-flex">
-            <%= for role <- @roles do %>
-              <a href="#"
-                 alt="<%= case role do
-                      :campaign_manager -> "Campaign manager"
-                      :campaigner -> "Campaigner"
-                      :mechanic -> "Tech"
-                      :robot -> "API"
-                      end %>"
-                 phx-click="change_role"
-                 phx-value-staffer="<%= staff.id %>"
-                 phx-value-role="<%= role %>"
-                 class='btn-circle role-icon
-                       <%= if role == @team_roles[staff.id], do: "selected btn-warning", else: "btn-light" %>'
-              >
-                <span>
-                <%= case role do 
-                   :campaign_manager -> "👩‍✈"
-                   :campaigner -> "🤹"
-                   :mechanic -> "👩‍🔧"
-                   :robot -> "🤖"
-                end %>
-                </span>
-              </a>
-            <% end %>
-
-            <%= if staff.id != @staffer.id do %>
-            <a href="#" phx-click="remove_staffer" phx-value-staffer="<%= staff.id %>" class="btn btn-light border-danger border-3 align-self-center ml-auto "> <i class="fas fa-user-times"></i> </a>
-            <% end %>
-          </div>
-      </li>
+          </form>
+        </div>
+      </section>
     <% end %>
-  </ul>
-</section>
 
+    <section>
+      <ul class="list-group">
+        <%= for staff <- @staffers do %>
+          <li class="list-group-item"> 
+            <div class="row">
+              <div class="col-lg-6">
+                <p>
+                  <strong><%= staff.user.email %></strong>
+                </p>
+              </div class="col-lg-6">
+              <div class="col-lg-6 d-flex">
+                <%= for role <- @roles do %>
+                  <a href="#"
+                     alt="<%= case role do
+                          :campaign_manager -> "Campaign manager"
+                          :campaigner -> "Campaigner"
+                          :mechanic -> "Tech"
+                          :robot -> "API"
+                          end %>"
+                     phx-click="change_role"
+                     phx-value-staffer="<%= staff.id %>"
+                     phx-value-role="<%= role %>"
+                     class='btn-circle role-icon
+                           <%= if role == @team_roles[staff.id], do: "selected btn-warning", else: "btn-light" %>'
+                  >
+                    <span>
+                      <%= case role do 
+                      :campaign_manager -> "👩‍✈"
+                      :campaigner -> "🤹"
+                      :mechanic -> "👩‍🔧"
+                      :robot -> "🤖"
+                      end %>
+                    </span>
+                  </a>
+                <% end %>
+
+                <%= if staff.id != @staffer.id do %>
+                  <a href="#" phx-click="remove_staffer" phx-value-staffer="<%= staff.id %>" class="btn btn-light border-danger border-3 align-self-center ml-auto "> <i class="fas fa-user-times"></i> </a>
+                <% end %>
+              </div>
+          </li>
+        <% end %>
+      </ul>
+    </section>
+  </div>
+  <div class="col-lg-6">
+    <p>
+      Here you can invite users of Proca to Your team, and manage their roles.
+    </p>
+    <p>
+      The user must already have an account - they should register <a href="/registration/new">here</a>.
+    </p>
+    <p>Roles you can assign are:</p>
+    <dl>
+      <dt> 👩‍✈ <b>Campaign manager</b></dt>
+      <dd>
+        Can change org settings, manage campaigns and action pages, as well as signoff them.
+      </dd>
+      <dt> 🤹 <b>Campaigner</b></dt>
+      <dd>
+        Cam manage campaigns and action pages.
+      </dd>
+      <dt> 👩‍🔧 <b>Techie</b></dt>
+      <dd>
+        Can change org settings and use the API.
+      </dd>
+      <dt> 🤖 <b>API user</b></dt>
+      <dd>
+         Can use the API.
+      </dd>
+    </dl>
+  </div>
+</article>
