--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -1,7 +1,7 @@
 /* This file is for your main application css. */
 
 // @import "./phoenix.css";
-@import "../../deps/phoenix_live_view/assets/css/live_view.css";
+// @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
 @import "./sb-admin/all.scss";
 @import "./sidebar.scss";
