--- a/lib/proca_web/templates/layout/live.html.leex
+++ b/lib/proca_web/templates/layout/live.html.leex
@@ -2,12 +2,12 @@
 <div id="content">
   <!-- Falsh msg (should be live view b/c what about live alerts? -->
   <div id="flash" class="container-fluid">
-    <%= if get_flash(@conn, :info) do %>
-      <p class="alert alert-info" role="alert"><%= get_flash(@conn, :info) %></p>
+    <%= if live_flash(@flash, :info) do %>
+      <p class="alert alert-info" role="alert"><%= live_flash(@flash, :info) %></p>
     <% end %>
 
-    <%= if get_flash(@conn, :error) do %>
-      <p class="alert alert-danger" role="alert"><%= get_flash(@conn, :error) %></p>
+    <%= if live_flash(@flash, :error) do %>
+      <p class="alert alert-danger" role="alert"><%= live_flash(@flash, :error) %></p>
     <% end %>
   </div>
   <!-- End Flash msg -->
