--- a/lib/proca_web/templates/dash/campaigns.html.leex
+++ b/lib/proca_web/templates/dash/campaigns.html.leex
@@ -21,6 +21,7 @@
             <p>Run by <%=  camp.org.title %>.</p>
           <% end %>
           <p>codename: <code><%= camp.name %></code></p>
+          <p>id: <code><%= camp.id %></code></p>
           <%= if length(camp.action_pages) > 0 do %>
             <h4>Action pages:</h4>
             <ul>
