Allow negative action page extra supporters count

--- a/lib/proca_web/templates/dash/campaigns.html.leex
+++ b/lib/proca_web/templates/dash/campaigns.html.leex
@@ -163,7 +163,7 @@
 
             <div class="form-group">
               <%= label f, :extra_supporters, "Extra supporters (signatures)" %>
-              <%= number_input f, :extra_supporters,  class: "form-control", min: "0", step: "1" %>
+              <%= number_input f, :extra_supporters,  class: "form-control", step: "1" %>
               <%= error_tag f, :extra_supporters %>
             </div>
             
