Change the PublicKey model

--- a/lib/proca_web/templates/dash/encryption.html.leex
+++ b/lib/proca_web/templates/dash/encryption.html.leex
@@ -12,7 +12,7 @@
             <code>
               <%= Proca.PublicKey.base_encode(pk.public) %>
             </code>
-            <%= if pk.expired_at do %>
+            <%= if pk.expired do %>
               <span class="float-right badge badge-secondary">expired</span>
             <% else %>
               <span class="float-right badge badge-warning">active</span>
