Make dash a bit more in out branding

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -3,6 +3,7 @@
 // @import "./phoenix.css";
 // @import "../../deps/phoenix_live_view/assets/css/live_view.css";
 
-@import "./sb-admin/all.scss";
 @import "./sidebar.scss";
+@import "./sb-admin/all.scss";
 @import "./dash.scss";
+@import "./brand.scss";
