--- a/assets/css/sb-admin/_variables.scss
+++ b/assets/css/sb-admin/_variables.scss
@@ -35,9 +35,9 @@ $brand-facebook: #3b5998;
 $yiq-contrasted-threshold: 195 !default;
 
 // Typography
-$body-color: $gray-600 !default;
+$body-color: $ftsq-color-gray !default;
 
-$font-family-sans-serif: "Nunito", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
+$font-family-sans-serif: "Titilium Web", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", 'Noto Color Emoji' !default;
 
 $font-weight-light: 300 !default;
 // $font-weight-base: 400;
