--- a/lib/proca_web/templates/page/sidebar.html.eex
+++ b/lib/proca_web/templates/page/sidebar.html.eex
@@ -6,8 +6,8 @@
     <div class="sidebar-brand-icon">
       <img src="<%= Routes.static_path(@conn, "/images/proca-icon-dark.png") %>" style="width: 50px; height: 50px">
     </div>
-    <div>
-      <h2><%= if @staffer, do: @staffer.org.name %></h2>
+    <div class="sidebar-brand-text">
+      <h2><%= if @user && @staffer, do: @staffer.org.name %></h2>
     </div>
   </a>
 
